fix test cases [force build]